[package]
name = "ssh-keydump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
ssh-key = { version = "0.5", features = ["rsa", "dsa", "std", "ecdsa", "ed25519", "encryption"] }
sec1 = "0.3"
