[package]
name = "ssh-keydump"
version = "0.1.0"
edition = "2021"
authors = ["Jan Holthuis <jan.holthuis@ruhr-uni-bochum.de>"]
description = "Simple tool to inspect OpenSSH keys."
readme = "README.md"
repository = "https://github.com/Holzhaus/ssh-keydump"
license = "MPL-2.0"
keywords = ["ssh", "openssh", "key"]
categories = ["cryptography", "command-line-utilities"]
exclude = [".*"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ssh-key = { version = "0.5", features = ["rsa", "dsa", "std", "ecdsa", "ed25519", "encryption"] }
sec1 = "0.3"
rpassword = "7.2"
